<resources>
    <string name="app_name">Bachelors</string>
    <string name="name_first">First Name</string>
    <string name="name_last">Last Name</string>
    <string name="age">Age</string>
    <string name="phone_no">Mobile No.</string>
    <string name="dob">D.O.B</string>
    <string name="idproof">Adhaar No.</string>
    <string-array name="Genres">
        <item>Tenant</item>
        <item>Owner</item>
    </string-array>
    <string name="title_activity_owner_reg">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <array name="type">
        <item>Select</item>
        <item>Tenant</item>
        <item>Owner</item>
    </array>
    <array name="gender">
        <item>Female</item>
        <item>Male</item>
    </array>


    <string name="action_setting">setting</string>
    <string name="location_name">Location name</string>
    <string name="name">Name</string>
    <string name="avl_rooms">avl_rooms</string>
    <string name="prorperty_no">property_no</string>
    <string name="add_property">Add property</string>
    <string name="view">view</string>
    <string name="update">update</string>
    <string name="show_password">Show Password</string>
    <string name="delete">Delete</string>
    <string-array name="city">
        <item>Select city</item>
        <item>Bangalore</item>
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Chennai</item>
        <item>Hyderabad</item>
        <item>Kolkata</item>
    </string-array>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard_common">Dashboard_common</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="offers">Offers!!!</string>
    <string name="action_app_info">App Info</string>
    <string name="coupons">coupons</string>
    <string name="App_info">BASIC INFORMATION ABOUT THE APP:\n\nThis Application Bachelors can be used by any Tenants from different parts of the country to book the rooms for rentals purposes\nThe Details include:\n1)PROFILE - the user can change his/her Details\n2)CHATS - The owner/Tenant can start a conversation here to the desired person\n3)NOTIFICATIONS - The owner gets a notifications if his/her property is requested by a Tenant\n4)ADD PROPERTY - Here the owner can add any number of properties\n5)SUGGESTIONS - The users(Tenants) can review the properties they have rented and give their valuable feedbacks\n6)SIGNOUT - the Users can sign out from the device here present on the navigation bar
\n\n* The app DOESNOT hold any resposibility if the password is shared with other users. This could be breach to the security of the owner\n* Users ABOVE 18 years are allowed to register\n
</string>
    <string name="title_activity_coupons">Coupons</string>
    <string name="grab_a_coupon">Grab a Coupon!!!!!</string>
    <string name="owner4">Rooms in KOLKATA \nAverage Cost: 3499</string>
    <string name="owner3">Rooms in MANGALORE \nAverage Cost: 1200</string>
    <string name="owner2">Rooms in PUNE \nAverage Cost: 3500</string>
    <string name="owner1">Rooms in BANGALORE \nAverage Cost: 5000</string>
    <string name="owner5">Rooms in DELHI \nAverage Cost: 4100</string>
    <string name="add_this">Add this!!</string>
    <string name="offer1">NEW USER OFFER: \nGet 10% off on your first \nRoom booking.</string>
    <string name="offer2">EXCLUSIVE: Flat Rs. 500 Off \nGet flat Rs. 500 off \non minimum Rs. 1800.</string>
    <string name="offer3">BANGALORE OFFER: \nNow Avail Flat 35% Off On \nRoom Bookings Across Bangalore.</string>
    <string name="offer4">HYDERABAD OFFER: \nNow Avail Flat 25% and Extra \n10% Cashback On Room Bookings \nIn Hyderabad.</string>
    <string name="offer5">10% CASHBACK: \nGet 10% Cashback on Bookings \nAbove @Rs. 2499.</string>
    <string name="scratchCard">GET A SCRATCH CARD</string>
    <string name="ScratchCard">\nCONGRATULATIONS!!\n\nYOU HAVE SUCCESSFULLY\nEARNED Rs. 20"</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_transaction_history">TransactionHistory</string>
</resources>
