<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:padding="40dp"
            android:background="#fafafa">

            <TextView
                android:id="@+id/text_coupon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_coupon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/button_style2"
                android:text="@string/add_this"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer1"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="40dp"
            android:background="#fafafa">

            <TextView
                android:id="@+id/text_coupon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_coupon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/button_style2"
                android:text="@string/add_this"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer2"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="40dp"
            android:background="#fafafa">

            <TextView
                android:id="@+id/text_coupon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_coupon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/button_style2"
                android:text="@string/add_this"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer3"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="40dp"
            android:background="#fafafa">

            <TextView
                android:id="@+id/text_coupon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_coupon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/button_style2"
                android:text="@string/add_this"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer4"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="40dp"
            android:background="#fafafa">

            <TextView
                android:id="@+id/text_coupon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_coupon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/button_style2"
                android:text="@string/add_this"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer5"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
</LinearLayout>
</ScrollView>